--- a/src/hw03/q03.html
+++ b/src/hw03/q03.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./q03.css">
 </head>
 <body>
-  <h1> DOM </h1>
     <div id="root">
+      <h1 class="title"> DOM </h1>
       <h2>MANIPULANDO EL DOM</h2>
       <p>HTML, CSS y JavaScript son los pilares fundamentales para el desarrollo web moderno.</p>
       <p><strong>HTML (HyperText Markup Language)</strong> es el lenguaje de marcado utilizado para estructurar y organizar el contenido de una página web. Proporciona la base sobre la cual se construye una página, definiendo elementos como encabezados, párrafos, listas, enlaces, imágenes, formularios, entre otros.</p>
@@ -17,6 +18,5 @@
       <p>Visita <a href="https://www.google.com" id="link">Google</a> para obtener más información.</p>
     </div>
   <script src="q03.js"></script>
-  <script type="module" src="../../main.js"></script>
 </body>
 </html>
